fitting, as soon as sofar sounds ended i implemented portfolio component

--- a/src/container/Projects/Projects.module.css
+++ b/src/container/Projects/Projects.module.css
@@ -23,3 +23,13 @@
     cursor: pointer;
     color: black;
 }
+
+.categoryActive {
+    margin: 1rem 1rem 1rem 1rem;
+    border-bottom: solid;
+}
+
+.categoryActive:hover {
+    cursor: pointer;
+    color: black;
+}
