--- a/src/container/Projects/Projects.module.css
+++ b/src/container/Projects/Projects.module.css
@@ -8,6 +8,7 @@
 
 .header {
     text-align: center;
+    margin-bottom: 0;
 }
 
 .categories {
@@ -16,7 +17,7 @@
 }
 
 .category {
-    margin: 1rem 1rem 1rem 1rem;
+    margin: 2rem 1rem 2rem 1rem;
 }
 
 .category:hover {
@@ -25,7 +26,7 @@
 }
 
 .categoryActive {
-    margin: 1rem 1rem 1rem 1rem;
+    margin: 2rem 1rem 2rem 1rem;
     border-bottom: solid;
 }
 
