--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -1,7 +1,6 @@
 .container {
     display: flex;
     flex-direction: column;
-    align-content: center;
     align-items: center;
 }
 
@@ -10,6 +9,11 @@
 }
 
 .projects {
+    width: 100%;
+}
+
+.experience {
+    margin-top: 4rem;
     width: 100%;
 }
 
