added link to header, changed post styling

--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -6,6 +6,17 @@
     align-content: center;
     justify-content: center;
     background: white;
+    z-index: 1;
+}
+
+.link {
+    all:unset;
+}
+
+.link:hover {
+    cursor: pointer;
+    font-weight: 400;
+    color: black;
 }
 
 .item1 {
