fixed front page for mobile

--- a/src/components/experienceItem/experienceItem.module.css
+++ b/src/components/experienceItem/experienceItem.module.css
@@ -4,7 +4,7 @@
 .header {
     display: flex;
     font-weight: 400;
-    font-size: 1.25rem;
+    font-size: 1rem;
 }
 
 .company {
@@ -15,4 +15,11 @@
     margin-top: 1rem;
     display: flex;
     
+}
+
+@media(min-width:767px) {
+
+    .header {
+        font-size: 1.25rem;
+    }
 }
