--- a/src/components/experience/experience.module.css
+++ b/src/components/experience/experience.module.css
@@ -1,12 +1,18 @@
 .container {
-    align-self: center;
+  align-self: center;
 }
 
 .header {
-    text-align: center;
-    margin-bottom: 4rem;
+  text-align: center;
+  margin: 0 2rem 4rem 2rem;
 }
 
 .experienceContainer {
+    margin-left: 2rem;
+  }
+
+@media (min-width: 767px) {
+  .experienceContainer {
     margin-left: 4rem;
+  }
 }
