--- a/src/components/intro/intro.module.css
+++ b/src/components/intro/intro.module.css
@@ -1,8 +1,15 @@
 .container {
     text-align: center;
-    padding: 50vh 3rem 50vh 3rem;
+    padding: 50vh 2rem 50vh 2rem;
 }
 
 .text {
     margin-bottom: 0;
+}
+
+
+@media(min-width: 767px) {
+    .container {
+        padding: 50vh 3rem 50vh 3rem;
+    }
 }
