--- a/src/components/itemGenerator/itemGenerator.module.css
+++ b/src/components/itemGenerator/itemGenerator.module.css
@@ -1,8 +1,17 @@
 .container {
   width: 100%;
   display: flex;
+  flex-direction: column;
 }
 
-.item {
-  flex: 0 0 calc(100% / 3);
+@media(min-width: 767px)
+ {
+  .container {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+  }
+  .item {
+    flex: 0 0 calc(100% / 3);
+  }
 }
