--- a/src/container/Projects/Projects.module.css
+++ b/src/container/Projects/Projects.module.css
@@ -3,12 +3,11 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-
 }
 
 .header {
     text-align: center;
-    margin-bottom: 0;
+    margin: 0 2rem 0 2rem;
 }
 
 .categories {
