--- a/src/templates/blog-post.module.css
+++ b/src/templates/blog-post.module.css
@@ -4,3 +4,9 @@
     flex-direction: column;
     align-items: center;
 }
+
+.content {
+    width: 40%;
+    align-self: center;
+    text-align: center;
+}
