--- a/src/components/PostStuff/intro/intro.module.css
+++ b/src/components/PostStuff/intro/intro.module.css
@@ -4,15 +4,16 @@
     align-items: center;
     width: 100%;
     height: 70vh;
-    background-color: #8defd5;
-    
+    background-color: #8defd5;   
 }
 
-.left {
+.left, .right {
     display: flex;
     flex-direction: column;
     width: 50%;
+    height: 100%;
     align-items: center;
+    justify-content: center;
     color: #f7f7f7;
 }
 
@@ -29,6 +30,8 @@
     font-weight: 250;
 }
 
-.right {
-    width: 50%;
+.image {
+    width: 30%;
+    height: 30%;
+    border-radius: 50%;
 }
