mobile styling for intro section

--- a/src/templates/blog-post.module.css
+++ b/src/templates/blog-post.module.css
@@ -5,8 +5,21 @@
     align-items: center;
 }
 
+.page {
+    display: flex;
+    flex-direction: column;
+    width: calc(100% - 2rem);
+    background: red;
+  }
+
 .content {
     width: 40%;
     align-self: center;
     text-align: center;
+}
+
+@media(min-width: 767px) {
+    .page {
+        width: 100%;
+    }
 }
