--- a/src/components/PostStuff/intro/intro.module.css
+++ b/src/components/PostStuff/intro/intro.module.css
@@ -1,6 +1,9 @@
 .container {
+    padding-left: 1rem;
+    padding-right: 1rem;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
     width: 100%;
     height: 70vh;
@@ -10,28 +13,72 @@
 .left, .right {
     display: flex;
     flex-direction: column;
-    width: 50%;
-    height: 100%;
-    align-items: center;
-    justify-content: center;
     color: #f7f7f7;
+    width: 100%;
 }
 
 .header {
-    width: 60%;
+    width: 100%;
     font-family: Roboto Mono;
     font-weight: 600;
     font-size: 1rem;
 }
 
 .excerpt {
-    width: 60%;
+    width: 100%;
     font-size: 2rem;
     font-weight: 250;
 }
 
 .image {
-    width: 30%;
-    height: 30%;
+    width: 70%;
+    height: 70%;
     border-radius: 50%;
+    align-self: center;
+}
+
+.image img {
+    margin:0;
+}
+
+@media(min-width:767px) {
+    .container {
+        padding: 0;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        height: 70vh;
+        background-color: #8defd5;   
+    }
+
+    .left, .right {
+        display: flex;
+        flex-direction: column;
+        width: 50%;
+        height: 100%;
+        align-items: center;
+        justify-content: center;
+        color: #f7f7f7;
+    }
+
+    .image {
+        width: 30%;
+        height: 30%;
+        border-radius: 50%;
+    }
+
+    .header {
+        width: 100%;
+        font-family: Roboto Mono;
+        font-weight: 600;
+        font-size: 1rem;
+    }
+    
+    .excerpt {
+        width: 100%;
+        font-size: 2rem;
+        font-weight: 250;
+    }
 }
