--- a/src/templates/blog-post.module.css
+++ b/src/templates/blog-post.module.css
@@ -8,18 +8,21 @@
 .page {
     display: flex;
     flex-direction: column;
-    width: calc(100% - 2rem);
-    background: red;
+    width: calc(100% - 4rem);
   }
 
 .content {
-    width: 40%;
+    width: 100%;
     align-self: center;
-    text-align: center;
 }
 
 @media(min-width: 767px) {
     .page {
         width: 100%;
+    }
+
+    .content {
+        width: 40%;
+        align-self: center;
     }
 }
