--- a/src/components/PostStuff/background/background.module.css
+++ b/src/components/PostStuff/background/background.module.css
@@ -1,33 +1,32 @@
 .container {
   margin-top: 6rem;
   margin-bottom: 6rem;
-  padding-right: 2rem;
-  padding-left: 2rem;
+  padding-right: 0rem;
+  padding-left: 0rem;
   width: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
 }
 
 .title {
   font-weight: 300;
   font-size: 2rem;
-  text-align: center;
 }
 
 .content {
+  margin-bottom: 2rem;
   font-size: 1.25rem;
-  text-align: center;
 }
 
 .left, .right {
-  width: 40%;
+  width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  
 }
 
 .rightContainer {
-  margin-left: 6rem;
   display: flex;
   flex-direction: column;
 }
@@ -41,3 +40,29 @@
     font-weight: 300;
 }
 
+@media(min-width: 767px) {
+
+  .container {
+    display: flex;
+    padding-right: 2rem;
+    padding-left: 2rem;
+    flex-direction: row;
+
+  }
+  .left, .right {
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+align-items: flex-start;
+  }
+
+  .rightContainer {
+    margin-left: 6rem;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .content {
+    margin-bottom: 0rem;
+  }
+}
