--- a/src/components/experience/experience.module.css
+++ b/src/components/experience/experience.module.css
@@ -1,10 +1,11 @@
 .container {
+  margin-top: 6rem;
   align-self: center;
 }
 
 .header {
   text-align: center;
-  margin: 0 2rem 4rem 2rem;
+  margin: 0 2rem 6rem 2rem;
 }
 
 .experienceContainer {
