--- a/src/components/carousel/carousel.module.css
+++ b/src/components/carousel/carousel.module.css
@@ -7,13 +7,14 @@
 
 .imageContainer {
   display: flex;
-  width: 500px;
-  height: 500px;
+  width: 50%;
+  
+  margin-right: 2rem;
+  margin-left: 2rem;
 }
 
 .FaArrowLeft, .FaArrowRight {
-  margin-right: 2rem;
-  margin-left: 2rem;
+  
 }
 
 .FaArrowLeft:hover, .FaArrowRight:hover {
