added carousel that supports swipe gestures

--- a/src/templates/blog-post.module.css
+++ b/src/templates/blog-post.module.css
@@ -25,4 +25,9 @@
         width: 50%;
         align-self: center;
     }
+
+    .carousel {
+        width: 50%;
+        align-self: center;
+    }
 }
