front page styling, added opacity to portfolio items

--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -19,11 +19,7 @@
     color: black;
 }
 
-.item1 {
+.item1, .item2, .item3 {
     margin-right: 1rem;
-}
-
-.item2 {
     margin-left: 1rem;
-    
 }
