--- a/src/components/experience/experience.module.css
+++ b/src/components/experience/experience.module.css
@@ -1,6 +1,9 @@
 .container {
   margin-top: 6rem;
-  align-self: center;
+  margin-bottom: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .header {
@@ -14,6 +17,6 @@
 
 @media (min-width: 767px) {
   .experienceContainer {
-    margin-left: 4rem;
+    width: 50%;
   }
 }
