--- a/src/components/item/item.module.css
+++ b/src/components/item/item.module.css
@@ -4,6 +4,9 @@
 }
 
 .image {
+  opacity: 1;
+  transition: .5s ease;
+  backface-visibility: hidden;
   width: 100%;
   height: 100%;
   position: relative;
@@ -23,7 +26,7 @@
 }
 
 .container:hover .overlay {
-  opacity: 1;
+  opacity: .85;
 }
 
 .text {
