front page styling

--- a/src/components/experienceItem/experienceItem.module.css
+++ b/src/components/experienceItem/experienceItem.module.css
@@ -3,6 +3,7 @@
 }
 .header {
     display: flex;
+    flex-direction: column;
     font-weight: 400;
     font-size: 1rem;
 }
@@ -20,6 +21,7 @@
 @media(min-width:767px) {
 
     .header {
+        flex-direction: row;
         font-size: 1.25rem;
     }
 }
