--- a/src/components/intro/intro.module.css
+++ b/src/components/intro/intro.module.css
@@ -1,7 +1,7 @@
 .container {
     text-align: center;
     width: 100%;
-    padding: 40vh 2rem 40vh 2rem;
+    padding: calc(40vh - 55px) 2rem 40vh 2rem;
 }
 
 .text {
