--- a/src/components/PostStuff/intro/intro.module.css
+++ b/src/components/PostStuff/intro/intro.module.css
@@ -7,7 +7,7 @@
     align-items: center;
     width: 100%;
     height: 70vh;
-    background-color: #8defd5;   
+    background-color: #12c3e8;   
 }
 
 .left, .right {
