fixed css color rendering issue for safari

--- a/src/components/intro/intro.module.css
+++ b/src/components/intro/intro.module.css
@@ -8,8 +8,8 @@
     margin-bottom: 0;
 }
 
-.school {
-    all: unset;
+.school, .school:link, .school:visited, .school:hover, .school:active {
+    font-weight: 300;
     color: #ef1515;
 }
 
