made the experience reponse design better

--- a/src/components/experienceItem/experienceItem.module.css
+++ b/src/components/experienceItem/experienceItem.module.css
@@ -18,7 +18,14 @@
     
 }
 
+.dot {
+    display: none;
+}
+
 @media(min-width:767px) {
+    .dot {
+        display: inline;
+    }
 
     .header {
         flex-direction: row;
